# lns-code-challenge

./: .gitignore  README.md
challenge3_fp_matmul/: fp_matmul.cpp
challenge4_xlns32_matmul/: xlns32_matmul.cpp
challenge5_xlns16_matmul/: xlns16_matmul.cpp
challenge6_unified_matmul/: matmul_unified.cpp
ggml-lns-backend/: CMakeLists.txt
ggml-lns-backend/examples/: lns_matmul.cpp  mini_transformer.cpp
ggml-lns-backend/include/: ggml-lns.h
ggml-lns-backend/src/: ggml-lns.cpp
